# 3-python-package-exercise-stuytowners

./: Pipfile  README.md  demo.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
my_module/: __init__.py  functions.py
src/: setup.py
tests/: test_functions.py
