[project]
name = "funny_gpt_stuytowners"
version = "0.0.2"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A package for project 3 for stuytowners"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-stuytowners/tree/main"
